kubernetes/manifest.yaml
# ServiceAccounten er allerede oppretta, kommenterer ut for å unngå å committe client-id unødvendig
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  annotations:
#    azure.workload.identity/client-id:
#  name: blob-demo-sa
#  namespace: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: storage-demo
  name: storage-demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-demo
  strategy: {}
  template:
    metadata:
      labels:
        app: storage-demo
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: blob-demo-sa
      containers:
      - image: ghcr.io/christiantryti/storage-test:main
        imagePullPolicy: Always
        name: storage-test
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: storage-demo
  name: storage-demo
  namespace: demo
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: storage-demo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-demo
  namespace: demo
spec:
  ingressClassName: cilium
  rules:
    - host: storage-demo.c.organa.no
      http:
        paths:
          - backend:
              service:
                name: storage-demo
                port:
                  number: 8080
            path: /
            pathType: Exact
---
## Gateway api funka ikke siden selve gatewayen ligger i default, og kan ikke brukes cross-namespace default
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: storage-demo
#  namespace: demo
#spec:
#  hostnames:
#    - storage-demo.c.organa.no
#  parentRefs:
#    - group: gateway.networking.k8s.io
#      kind: Gateway
#      name: nginx-gateway
#      namespace: default
#  rules:
#    - backendRefs:
#        - kind: Service
#          name: storage-demo
#          port: 8080
#      matches:
#        - path:
#            type: PathPrefix
#            value: /
